[package]
name = "signal-backup-bruteforcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
clap = { version = "4.1.8", features = ["derive"] }
snafu = "0.7.4"
generic-array = "0.14"
aes = "0.8.2"
